2008-08-27 Albert Chu <chu11@llnl.gov>

	* common/src/toolcommon/tool-sdr-cache-common.h,
	common/src/toolcommon/tool-sdr-cache-common.c
	(sdr_cache_get_sensor_owner_lun): New function.

	* ipmi-sensors/: Add channel and lun info to verbose output.

	* ipmi-sensors/, ipmimonitoring/: Only call bridging if specified
	channel is IPMB.

	* libfreeipmi/src/api/ipmi-sensors-cmds-api.c,
	libfreeipmi/include/freeipmi/ipmi-sensors-cmds-api.h
	(ipmi_cmd_get_sensor_reading_ipmb): Take lun parameter.

	* ipmi-sensors/, ipmimonitoring/: Pass SDR lun as well as slave
	address for ipmb bridging.

	* ipmimonitoring/: Add fan redundancy interpretation.

	* ipmimonitoring/: Support alternate sensors config file.

	* common/src/toolcommon/tool-sdr-cache-common.h,
	common/src/toolcommon/tool-sdr-cache-common.c
	(sdr_cache_create_directory): New function.

	* common/src/toolcommon/tool-sdr-cache-common.c: Code cleanup.
	
	* ipmimonitoring/src/ipmimonitoring/: Code cleanup.
	
	* libfreeipmi/src/util/ipmi-sensor-and-event-code-tables-util.c,
	libfreeipmi/include/freeipmi/util/ipmi-sensor-and-event-code-tables.h
	(ipmi_get_sensor_type_code_message_short,
	ipmi_get_generic_event_message_short): New functions.
	
	* ipmi-sensors/, ipmimonitoring/: Use short message versions
	instead of long message versions under non-verbose output.
	
	* Tweak documentation.

2008-08-26 Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/: Support power supply redundancy interpretation.
	Support voltage assertion interpretation.

	* libfreeipmi/src/api/ipmi-kcs-interface-api.c: Re-read if get
	message queue is empty error.
	
	* ipmi-sensors/, ipmimonitoring/: Continue on if a message timeout
	occured.  It is not a fatal error.

	* libfreeipmi/src/debug/ (ipmi_obj_debug_ipmb): Fix output corner
	case.

	* Tweak documentation.
	
2008-08-25 Albert Chu <chu11@llnl.gov>

	* ipmi-sel/src/: Support debug dumping of SEL Event Records.
	Handle sensor finding corner case on Supermicro.
