@@ -186,6 +186,12 @@ int sdr_cache_get_entity_id (pstdout_state_t pstate,
                              uint8_t *entity_id,
                              uint8_t *entity_instance);
 
+int sdr_cache_get_fru_entity_id (pstdout_state_t pstate,
+                                 uint8_t *sdr_record,
+                                 unsigned int sdr_record_len,
+                                 uint8_t *fru_entity_id,
+                                 uint8_t *fru_entity_instance);
+
 int sdr_cache_get_manufacturer_id (pstdout_state_t pstate,
                                    uint8_t *sdr_record,
                                    unsigned int sdr_record_len,
